:sparkles: :ok_hand: Added all N to N functionalities with user & popularity.

--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -37,6 +37,9 @@
           <div>
             <p class="parag">Puntaje: <%- pattern.score %>/5</p>
           </div>
+          <div>
+            <p class="parag">Popularidad: <%- pattern.popularity %></p>
+          </div>
           <div >
             <p class="parag">Materiales:</p>
           </div>
