New Nav Finished

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -5,17 +5,220 @@ html, body {
 }
 
 .topnav {
-  position: fixed;
   width: 100%;
-  padding-top: 15px;
   display: flex;
   background-color: #26bfbf;
-  top: 0;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  padding-bottom: 15px;
+  justify-content: flex-start;
+  height: 50px;
 }
+
+.logo{
+  text-decoration: none;
+  position: absolute;
+  height: 34px;
+  padding: 8px 30px;
+  font-family: "Dancing Script";
+  font-size: 30px;
+  color: white;
+  font-weight: normal;
+}
+
+.logo:hover {
+  background-color: darkcyan;
+}
+
+.li-nav:hover{
+  background-color: darkcyan;
+}
+
+.topnav > .ul-nav {
+  margin: 0;
+  padding: 0;
+  float: left;
+  list-style-type: none;
+  position: fixed;
+  right: 20px;
+}
+
+.topnav > .ul-nav > .li-nav {
+  float: left;
+}
+
+.nav-text{
+  display: inline-block;
+  padding: 8px 30px;
+  height: 34px;
+  text-decoration: none;
+  font-family: "Dancing Script";
+  font-size: 30px;
+  color: white;
+  font-weight: normal;
+}
+
+.user-nav-content .user-nav-sub ul li {
+  width: 133px;
+  padding: 5px 0px;
+}
+
+.user-nav-sub .nav-text-li{
+  text-decoration: none;
+  font-family: "Dancing Script";
+  font-size: 25px;
+  color: white;
+  font-weight: normal;
+  background-color: #26bfbf;
+  height: 50px;
+  padding: 10px;
+  width: 133px;
+}
+
+#toogle{
+  display: none;
+}
+
+.toogle-nav{
+  background: #26bfbf;
+  border-bottom: solid;
+  border-bottom-color: white;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-content: center;
+}
+
+#toogle-nav{
+  margin-right: 30px;
+  margin-top: 10px;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.toogle-nav{
+  display: none;
+}
+
+.toogle-nav #toogle-nav span{
+  background-color: grey;
+  width: 80%;
+  height: 1px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+
+
+@media screen and (max-width: 875px){
+
+  .topnav{
+    display: none;
+  }
+
+  .toogle-nav{
+    display: flex;
+  }
+
+  .ul-nav {
+    display: flex;
+    flex-direction: column;
+    background: #26bfbf;
+    width: 133px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .li-nav {
+    width: 100%;
+  }
+
+  .nav-text{
+    display: 100%;
+  }
+
+  #toogle:checked + .topnav {
+    height: 100%;
+    width: 100%;
+    display: block;
+    padding: 8px 30px;
+    text-decoration: none;
+    font-family: "Dancing Script";
+    font-size: 30px;
+    color: white;
+    font-weight: normal;
+
+  }
+
+  #toogle:checked + .topnav > .ul-nav{
+    position: fixed;
+    right: 0px;
+  }
+
+}
+
+.user-nav-content{
+  position: fixed;
+  top: 50px;
+  right: 5px;
+  overflow: hidden;
+}
+
+.user-nav-content input{
+  text-decoration: none;
+  border:none;
+  background-color: #26bfbf;
+  font-family: "Dancing Script";
+  font-size: 25px;
+  color: white;
+  font-weight: normal;
+  width: 133px;
+  height: 50px
+}
+
+.user-nav-content input:hover{
+  background-color: darkcyan;
+
+}
+
+.user-nav-content .nav-text-li:hover{
+  background-color: darkcyan;
+
+}
+
+.user-nav-sub > ul {
+  list-style-type: none;
+}
+
+.user-nav-content{
+  max-height: 0;
+}
+
+#user-focus:focus ~ .user-nav-content{
+  max-height: 400px;
+  -webkit-transition: max-height 0.4s ease-in;
+  -moz-transition: max-height 0.4s ease-in;
+  transition: max-height 0,4s ease-in;
+}
+
+
+
+
+
+
+
+
+/*
+
 
 .nav-text {
   text-decoration: none;
@@ -23,7 +226,104 @@ html, body {
   font-size: 30px;
   color: white;
   font-weight: normal;
-  align-self: auto;
+  height: 100%;
+  justify-self: center;
+  align-self: center;
+}
+
+
+.nav-element{
+  align-self: center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-right: 10px;
   padding-left: 10px;
+
 }
+
+.nav-element:hover{
+  background-color: darkcyan;
+
+}
+
+#toogle{
+  display: none;
+}
+
+.toogle-nav{
+  background: #26bfbf;
+  border-bottom: solid;
+  border-bottom-color: white;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-content: center;
+}
+
+#toogle-nav{
+  margin-right: 30px;
+  margin-top: 10px;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.toogle-nav{
+  display: none;
+}
+
+.toogle-nav #toogle-nav span{
+  background-color: grey;
+  width: 80%;
+  height: 1px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+@media screen and (max-width: 700px){
+  .topnav{
+    display: none;
+
+  }
+
+  .toogle-nav{
+    display: flex;
+  }
+
+  .nav-element{
+
+    display:flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-end;
+    width: 100%;
+    margin-right: 60px;
+  }
+
+  .alert-container{
+    display: none;
+
+  }
+
+  #toogle:checked + .topnav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+  }
+}
+
+
+ */
