:lock: :rotating_light: Checkpassword as middleware & linting.

--- a/src/views/session/new.html.ejs
+++ b/src/views/session/new.html.ejs
@@ -26,13 +26,13 @@
             <label for="email"><p class="label-content">Correo:</p></label>
           </div>
           <div class="body-item">
-            <input class="input" type="email" name="email" value="<%= locals.email %>" />
+            <input class="input" type="email" name="email" value="<%= locals.email %>" required/>
           </div >
           <div class="body-item">
             <label for="password"><p class="label-content">Contraseña:</p></label>
           </div>
           <div class="body-item">
-            <input class="input" type="password" name="password" />
+            <input class="input" type="password" name="password" required/>
           </div>
           <div class="body-item">
               <div class="end-user-login">
