--- a/src/assets/styles/materials_show.scss
+++ b/src/assets/styles/materials_show.scss
@@ -1,8 +1,8 @@
 
 
 .contenedor-body-show{
-  margin: 30px;
-  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .material-show-head{
