--- a/src/views/vote_patterns/_form.html.ejs
+++ b/src/views/vote_patterns/_form.html.ejs
@@ -20,7 +20,11 @@
       <label  class="parag" for="rating">Calidad:</label>
       <select  name="rating" required>
         <% options.forEach(option => { %>
-          <option value="<%- option %>"><%- option %></option>
+          <% if ((votePattern) && (votePattern.rating === option)) { %>
+            <option value="<%- option %>" selected><%- option %></option>
+          <% } else { %>
+            <option value="<%- option %>"><%- option %></option>
+          <% } %>
         <% }); %>
       </select>
     </div>
