--- a/src/views/patterns/_form.html.ejs
+++ b/src/views/patterns/_form.html.ejs
@@ -53,7 +53,7 @@
             <% }); %>
           </select>
         </div>
-
+      <% } %>
       <% if (!pattern.isNewRecord) { %>
         <div class="panel-content">
           <p class="parag-list">Materiales Actuales:</p>
@@ -63,10 +63,7 @@
             <div class="material-checkbox">
               <p class="parag-list"> <%- material.name %> </p>
             </div>
-            <div class="material-checkbox">
-              <input class="checkbox" type="checkbox" name="materials" value="<%- material.id %>">
-            </div>
-        <% }); %>
+          <% }); %>
         </div>
 
         <div class="panel-content">
@@ -89,7 +86,8 @@
         <% }); %>
       </div>
       <div class="panel-content">
-        <input class="button-pattern" id="boton" type="submit" name="create" value="Crear" />
+        <% if (pattern.isNewRecord) { %>
+          <input class="button-pattern" id="boton" type="submit" name="create" value="Crear" />
         <% } else { %>
           <input class="button-pattern" id="boton" type="submit" name="update" value="Actualizar" />
         <% } %>
