--- a/src/views/patterns/index.html.ejs
+++ b/src/views/patterns/index.html.ejs
@@ -37,6 +37,9 @@
               <div class="pattern-element">
                 <a class="parag-list">Puntaje: <%- pattern.score %>/5</a>
               </div>
+              <div class="pattern-element">
+                <a class="parag-list">Popularidad: <%- pattern.popularity %></a>
+              </div>
               <% if (currentUser) { %>
                 <% if ((currentUser.id === pattern.authorId) || (currentUser.role === 'admin')) { %>
                   <div class="pattern-element">
