--- a/src/assets/styles/pattern_show.scss
+++ b/src/assets/styles/pattern_show.scss
@@ -1,4 +1,187 @@
 
+/* Built */
+
+.body-show-pattern {
+  display: flex;
+  flex-direction: column;
+}
+
+.tittle-edit-delete {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 30px;
+}
+
+.pattern-elements {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  height: 400px;
+  border-style: solid;
+}
+
+.pattern-elements-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  height: 400px;
+  flex-wrap: wrap;
+  border-style: solid;
+  margin-top: 40px;
+}
+
+.pattern-photo {
+  width: 400px;
+  height: 400px;
+  position: absolute;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: #26bfbf;
+  margin: 0px 30px;
+}
+
+.pattern-video {
+  width: 70%;
+  height: 80%;
+  padding-right: 30px ;
+  margin-left: 500px;
+  border-style: solid;
+}
+
+.pattern-data {
+  border-style: solid;
+  width: 20%;
+  margin: 0px 30px;
+  height: 100%;
+}
+
+.instruction-content{
+  display: flex;
+  flex-direction: column;
+  white-space: pre-line;
+  width: 30%;
+  padding-right: 100px;
+  height: 100%;
+  border-style: solid;
+}
+
+.pattern-materials {
+  width: 20%;
+  margin-right: 20px;
+  border-style: solid;
+  height: 100%;
+}
+
+.pattern-comment {
+  border-style: solid;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.pattern-comments {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+
+.comment {
+  border-style: solid;
+}
+
+/* Details */
+
+.comment-pattern {
+  border-style: solid;
+  margin: 0px 30px;
+}
+
+.tittle-element {
+  padding-right: 20px;
+}
+
+.youtube-video {
+  width: 100%;
+  height: 100%;
+}
+
+.pattern-data {
+  height: 100%;
+}
+
+.comment-tittle{
+  margin-top: 30px;
+
+}
+
+.comment-item{
+  align-items: center;
+  justify-items: center;
+  padding-right: 20px;
+}
+
+
+/* Interaction */
+
+
+@media screen and (max-width: 875px){
+
+  .pattern-elements {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    height: 800px;
+
+  }
+
+  .pattern-photo {
+    margin:0px;
+    widows: 400px;
+    height: 400px;
+  }
+
+  .pattern-video {
+    margin: 0px;
+    margin-top: 470px;
+    padding: 0px;
+  }
+
+  .youtube-video {
+    padding-left: 0px;
+  }
+
+  .pattern-elements-2 {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+  }
+
+  .pattern-data {
+    width: 100%;
+
+  }
+
+  .pattern-materials {
+    width: 100%;
+    margin: 20px 30px;
+
+  }
+
+  .instruction-content {
+    width: 100%;
+    margin: 0px 30px;
+    white-space: pre-line;
+    padding: 0px;
+  }
+}
+
+
+
+/*
+
 .content-body-header{
   display: flex;
   flex-direction: row;
@@ -36,6 +219,8 @@
   font-size: 13px;
   color: gray;
 }
+
+
 
 .comment-text{
   font-family: arial;
@@ -99,3 +284,4 @@
   padding-right: 20px;
 }
 
+*/
