--- a/src/assets/styles/pattern_show.scss
+++ b/src/assets/styles/pattern_show.scss
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: flex-start;
   height: 400px;
-  border-style: solid;
+
 }
 
 .pattern-elements-2 {
@@ -28,7 +28,6 @@
   justify-content: flex-start;
   height: 400px;
   flex-wrap: wrap;
-  border-style: solid;
   margin-top: 40px;
 }
 
@@ -47,11 +46,9 @@
   height: 80%;
   padding-right: 30px ;
   margin-left: 500px;
-  border-style: solid;
 }
 
 .pattern-data {
-  border-style: solid;
   width: 20%;
   margin: 0px 30px;
   height: 100%;
@@ -64,18 +61,15 @@
   width: 30%;
   padding-right: 100px;
   height: 100%;
-  border-style: solid;
 }
 
 .pattern-materials {
   width: 20%;
   margin-right: 20px;
-  border-style: solid;
   height: 100%;
 }
 
 .pattern-comment {
-  border-style: solid;
   margin-top: 30px;
   display: flex;
   flex-direction: column;
@@ -88,13 +82,12 @@
 }
 
 .comment {
-  border-style: solid;
+  max-width: 630px;
 }
 
 /* Details */
 
 .comment-pattern {
-  border-style: solid;
   margin: 0px 30px;
 }
 
@@ -113,7 +106,6 @@
 
 .comment-tittle{
   margin-top: 30px;
-
 }
 
 .comment-item{
@@ -178,110 +170,3 @@
   }
 }
 
-
-
-/*
-
-.content-body-header{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 400px;
-  flex-wrap: wrap;
-}
-
-.picture-show{
-  width: 30%;
-  height: 90%;
-  border-radius: 50%;
-  border-style: solid;
-  border-color: #26bfbf;
-  align-items: center;
-  justify-items: center;
-}
-
-.center-header{
-  padding-left:80px;
-  width: 30%;
-  height: 90%;
-  align-items: center;
-  justify-items: center;
-  place-items: center;
-}
-
-.youtube{
-  height: 80%;
-  width: 100%;
-}
-
-.parag{
-  font-family: arial;
-  font-size: 13px;
-  color: gray;
-}
-
-
-
-.comment-text{
-  font-family: arial;
-  font-size: 14px;
-  color: black;
-}
-
-#boton-vote{
-  background-color: #26bfbf;
-  margin-top: 15px;
-  width: 70%;
-  height: 30px;
-  font-family: "Dancing Script";
-  font-size: 20px;
-  border-style: none;
-  color: white;
-  border-radius: 15px;
-
-}
-
-.middle-show{
-  display:  flex;
-  flex-direction: row;
-  width: 100%;
-  height: 250px;
-}
-
-.instruction-content{
-  display: flex;
-  flex-direction: column;
-  white-space: pre-line;
-  width: 40%;
-  padding-right: 100px;
-}
-
-.comment-form{
-  display: flex;
-  flex-direction: column;
-  width: 40%;
-}
-
-.comments-all{
-  display: flex;
-  flex-direction: column;
-  overflow-y: scroll;
-  height: 150px;
-  margin-bottom: 20px;
-}
-
-.comment{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  align-items: center;
-
-}
-
-.comment-item{
-  align-items: center;
-  justify-items: center;
-  padding-right: 20px;
-}
-
-*/
