--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,4 +7,5 @@
 @import './materials_pattern_create';
 @import './pattern_index';
 @import './pattern_show';
-@import './pattern'
+@import './pattern';
+@import './user-profile'
