--- a/src/views/users/show.html.ejs
+++ b/src/views/users/show.html.ejs
@@ -1,4 +1,109 @@
-<div class="contenedor-body" id="body-container">
+<div class="profile-content">
+  <div class="tittle-profile">
+    <div class="tittle-profile-element">
+      <h1><%- user.username %></h1>
+    </div>
+    <% if ((currentUser.id === user.id) || (currentUser.role === 'admin')) { %>
+      <div class="tittle-profile-element">
+        <form>
+          <input id="boton" type="submit" value="Editar Perfil" />
+        </form>
+      </div>
+      <div  class="tittle-profile-element">
+        <form action="<%- deleteUserPath %>" onclick="return confirm('Estás seguro?');"
+          method="POST">
+          <input type="hidden" name="_method" value="delete" />
+          <input id="boton" type="submit" value="Eliminar Cuenta" />
+        </form>
+      </div>
+    <% } %>
+  </div>
+  <div class="profile-data">
+    <div class="profile-picture">
+        <h4><%- user.photo %></h4>
+    </div>
+    <div class="profile-things">
+        <p class="profile-element" id="first">Correo: <%- user.email %></p>
+        <p class="profile-element">Edad: <%- user.age %></p>
+        <p class="profile-element">Seguidores: <%- user.popularity %></p>
+        <% if ((currentUser) && (currentUser.id !== user.id)) { %>
+          <div>
+            <%- include('_formFollow') %>
+          </div>
+        <% } %>
+    </div>
+  </div>
+  <div class="own-pattern">
+    <h2>Patrones Creados</h2>
+    <% if (!createdPatterns.length) { %>
+      <div class="user_show">
+        <p>No haz creado patrones!<p>
+      </div>
+    <% } %>
+    <div class="patterns-content">
+      <% createdPatterns.forEach((cp) => { %>
+      <div class="pattern-index">
+        <div class="pattern-index-element-photo">
+          <a class="photo">Foto</a>
+        </div>
+        <div class="pattern-index-element">
+          <a  href="<%- patternPath(cp) %>"><%- cp.name %></a>
+        </div>
+      </div>
+      <% }); %>
+    </div>
+    <div class="used-pattern">
+      <div>
+        <h2>Patrones realizados</h2>
+      </div>
+      <div>
+        <% if (!usedPatterns.length) { %>
+          <div>
+            <p>No tienes patrones realizados!<p>
+          </div>
+        <% } %>
+        <div class="patterns-content">
+          <% usedPatterns.forEach((up) => { %>
+          <div class="pattern-index">
+            <div class="pattern-index-element-photo">
+              <a class="photo">Foto</a>
+            </div>
+            <div class="pattern-index-element">
+              <a  href="<%- patternPath(up) %>"><%- up.name %></a>
+            </div>
+          </div>
+          <% }); %>
+        </div>
+      </div>
+    </div>
+    <div class="favorites-patterns">
+      <div>
+        <h2>Mis Patrones Favoritos</h2>
+      </div>
+
+      <% if (!favoritePatterns.length) { %>
+        <div >
+          <p>No tienes patrones favoritos!<p>
+        </div>
+      <% } %>
+      <div class="patterns-content">
+        <% favoritePatterns.forEach((fp) => { %>
+        <div class="pattern-index">
+          <div class="pattern-index-element-photo">
+            <a class="photo">Foto</a>
+          </div>
+          <div class="pattern-index-element">
+            <a  href="<%- patternPath(fp) %>"><%- fp.name %></a>
+          </div>
+        </div>
+        <% }); %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <!--
   <div class="content-new-user">
     <h1><%- user.username %></h1>
   </div>
@@ -36,7 +141,7 @@
   <% } %>
   <% usedPatterns.forEach((up) => { %>
     <div class="user_show">
-      <a href="<%- patternPath(up) %>"><%- up.name %></a>
+      <a  href="<%- patternPath(up) %>"><%- up.name %></a>
     </div>
   <% }) %>
   <% if (currentUser) { %>
@@ -75,3 +180,5 @@
     </form>
   </div>
 </div>
+
+-->
