--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -21,7 +21,7 @@
   <div class="show-pattern-body">
     <div class="content-body-header">
       <div class="picture-show">
-        <h4> </h4>
+        <img src="<%- pattern.image %>">
       </div>
       <div class="center-header">
         <div class="center-header-content">
