--- a/src/views/users/show.html.ejs
+++ b/src/views/users/show.html.ejs
@@ -4,7 +4,7 @@
   </div>
   <div id="hcontainer">
       <div id="left">
-          <h4><%- user.photo %></h4>
+        <img src="<%- user.photo %>">
       </div>
       <div id="middle">
           <p>Correo: <%- user.email %></p>
