--- a/src/views/users/show.html.ejs
+++ b/src/views/users/show.html.ejs
@@ -20,7 +20,7 @@
   </div>
   <div class="profile-data">
     <div class="profile-picture">
-        <h4><%- user.photo %></h4>
+      <img src="<%- user.photo %>">
     </div>
     <div class="profile-things">
         <p class="profile-element" id="first">Correo: <%- user.email %></p>
