--- a/src/views/patterns/show.html.ejs
+++ b/src/views/patterns/show.html.ejs
@@ -28,10 +28,16 @@
       <img src="<%- pattern.image %>">
     </div>
     <div class="pattern-video">
+      <% if (pattern.video) { %>
         <iframe class="youtube-video" allowFullScreen="allowFullScreen" src="https://www.youtube.com/embed/<%= pattern.video.slice(32) %>?ecver=1&amp;iv_load_policy=1
           &amp;rel=0&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red"
            width="80%" height="160%" allowtransparency="true" frameborder="0">
         </iframe>
+      <% } else { %>
+        <div class="pattern-data">
+          <p class="parag">No hay video disponible!</p>
+        </div>
+      <% } %>
     </div>
   </div>
   <div class="pattern-elements-2">
